--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
-            "outputPath": "dist/frontend/browser",
+            "outputPath": "dist/frontend",
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
