--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -21,7 +21,6 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@tailwindcss/postcss": "^4.1.11",
     "chart.js": "^4.5.0",
-    "express": "^4.18.2",
     "ng2-charts": "^8.0.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
